address missing scitype.png

--- a/notebooks/01_data_representation/notebook.ipynb
+++ b/notebooks/01_data_representation/notebook.ipynb
@@ -3,15 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Machine Learning in Julia, JuliaCon2020"
+    "# Machine Learning in Julia"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "A workshop introducing the machine learning toolbox\n",
-    "[MLJ](https://alan-turing-institute.github.io/MLJ.jl/stable/)."
+    "An introduction to the\n",
+    "[MLJ](https://alan-turing-institute.github.io/MLJ.jl/stable/)\n",
+    "toolbox."
    ],
    "metadata": {}
   },
@@ -136,7 +137,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](https://github.com/ablaom/MachineLearningInJulia2020/blob/for-MLJ-version-0.16/assets/scitypes.png)"
+    "![](scitypes.png)"
    ],
    "metadata": {}
   },
@@ -956,7 +957,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2×3 Matrix{Float64}:\n 0.138998    0.25212   0.452248\n 0.00468871  0.314913  0.19295"
+      "text/plain": "2×3 Matrix{Float64}:\n 0.925524  0.217461  0.750324\n 0.131266  0.66846   0.290553"
      },
      "metadata": {},
      "execution_count": 31
@@ -1017,7 +1018,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2×3 SparseArrays.SparseMatrixCSC{Float64, Int64} with 6 stored entries:\n 0.138998    0.25212   0.452248\n 0.00468871  0.314913  0.19295"
+      "text/plain": "2×3 SparseArrays.SparseMatrixCSC{Float64, Int64} with 6 stored entries:\n 0.925524  0.217461  0.750324\n 0.131266  0.66846   0.290553"
      },
      "metadata": {},
      "execution_count": 34
@@ -1054,7 +1055,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2×3 CategoricalArrays.CategoricalArray{Float64,2,UInt32}:\n 0.138998    0.25212   0.452248\n 0.00468871  0.314913  0.19295"
+      "text/plain": "2×3 CategoricalArrays.CategoricalArray{Float64,2,UInt32}:\n 0.925524  0.217461  0.750324\n 0.131266  0.66846   0.290553"
      },
      "metadata": {},
      "execution_count": 36
