no longer necessary to fix scitypes in iris data set

--- a/notebooks/02_models/notebook.unexecuted.ipynb
+++ b/notebooks/02_models/notebook.unexecuted.ipynb
@@ -3,15 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Machine Learning in Julia, JuliaCon2020"
+    "# Machine Learning in Julia (continued)"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "A workshop introducing the machine learning toolbox\n",
-    "[MLJ](https://alan-turing-institute.github.io/MLJ.jl/stable/)."
+    "An introduction to the\n",
+    "[MLJ](https://alan-turing-institute.github.io/MLJ.jl/stable/)\n",
+    "toolbox."
    ],
    "metadata": {}
   },
@@ -74,7 +75,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- [List of methods introduced in this tutorial](methods.md)\n",
     "- [MLJ Cheatsheet](https://alan-turing-institute.github.io/MLJ.jl/dev/mlj_cheatsheet/)\n",
     "- [Common MLJ Workflows](https://alan-turing-institute.github.io/MLJ.jl/dev/common_mlj_workflows/)\n",
     "- [MLJ manual](https://alan-turing-institute.github.io/MLJ.jl/dev/)\n",
@@ -158,16 +158,11 @@
    "execution_count": null
   },
   {
-   "outputs": [],
-   "cell_type": "code",
+   "cell_type": "markdown",
    "source": [
-    "coerce!(iris,\n",
-    "        Union{Missing,Continuous}=>Continuous,\n",
-    "        Union{Missing,Multiclass}=>Multiclass)\n",
-    "schema(iris)"
+    "These look fine."
    ],
-   "metadata": {},
-   "execution_count": null
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -1100,6 +1095,7 @@
    "cell_type": "code",
    "source": [
     "using Tables\n",
+    "\n",
     "y, X, w = unpack(data,\n",
     "                 ==(:a),\n",
     "                 name -> elscitype(Tables.getcolumn(data, name)) == Continuous,\n",
