fix up missing text

--- a/notebooks/04_tuning/notebook.unexecuted.ipynb
+++ b/notebooks/04_tuning/notebook.unexecuted.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Machine Learning in Julia"
+    "# Machine Learning in Julia (continued)"
    ],
    "metadata": {}
   },
@@ -189,6 +189,7 @@
    "cell_type": "code",
    "source": [
     "using Plots\n",
+    "gr(size=(490,300))\n",
     "_, _, lambdas, losses = learning_curve(mach,\n",
     "                                       range=r,\n",
     "                                       resampling=CV(nfolds=6),\n",
@@ -310,9 +311,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The `scale` in a range makes no in a `RandomSearch` (unless it is a\n",
-    "function) but this will effect later plots but it does effect the\n",
-    "later plots."
+    "The `scale` in a range is ignored in a `RandomSearch`, unless it is a\n",
+    "function. (It *is* relevant in a `Grid` search, not demonstrated\n",
+    "here.) Note however, the choice of scale *does* effect how later plots\n",
+    "will look."
    ],
    "metadata": {}
   },
@@ -420,13 +422,6 @@
    ],
    "metadata": {},
    "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "By default, sampling of a bounded range is uniform. Lets"
-   ],
-   "metadata": {}
   },
   {
    "cell_type": "markdown",
