update slides and .gitignore

--- a/slides/src/slides.tex
+++ b/slides/src/slides.tex
@@ -131,7 +131,7 @@
     \begin{itemize}
     \item Written in Julia (but bootstraps off sk-learn):\pause
       \begin{itemize}
-      \item Easier to understand
+      \item Easy access to core algorithms
       \item Easier to customize
       \item Easier to add new performant models
       \item Greater transparency and reproducibility
