--- a/slides/src/slides.tex
+++ b/slides/src/slides.tex
@@ -122,10 +122,10 @@
 \begin{frame}
   \frametitle{Some multi-paradigm machine learning toolboxes in Julia}
   \begin{itemize}
-  \item ScikitLearn.jl - thin wrapper for Python's scikit-learn
-  \item AutoMLPipeline.jl
-  \item MLJ.jl
-  \item FastAI.jl - specific to neural networks
+  \item {\df ScikitLearn.jl} - thin wrapper for Python's scikit-learn
+  \item {\df AutoMLPipeline.jl} - IBM
+  \item {\df MLJ.jl}
+  \item FastAI.jl - specific to neural networks (interface to {\df Flux.jl})
   \end{itemize}
 \end{frame}
 
