improvements to 02_models/ except pluto notebook

--- a/notebooks/02_models/notebook.unexecuted.ipynb
+++ b/notebooks/02_models/notebook.unexecuted.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "iris = OpenML.load(61); # a column dictionary table\n",
     "\n",
-    "using DataFrames\n",
+    "import DataFrames\n",
     "iris = DataFrames.DataFrame(iris);\n",
     "first(iris, 4)"
    ],
@@ -233,7 +233,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Each entry contains metadata for a model whose defining code is not yet loaded:"
+    "If you already have an idea about the name of the model, you could\n",
+    "search by string or regex:"
    ],
    "metadata": {}
   },
@@ -241,7 +242,24 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "meta = all_models[3]"
+    "some_models = models(\"LinearRegressor\") # sic"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Each entry contains metadata for a model whose defining code is not\n",
+    "yet loaded:"
+   ],
+   "metadata": {}
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
+    "meta = some_models[1]"
    ],
    "metadata": {},
    "execution_count": null
@@ -280,22 +298,6 @@
     "    meta.is_pure_julia\n",
     "\n",
     "models(filter_julia_classifiers)"
-   ],
-   "metadata": {},
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Find all models with \"Classifier\" in `name` (or `docstring`):"
-   ],
-   "metadata": {}
-  },
-  {
-   "outputs": [],
-   "cell_type": "code",
-   "source": [
-    "models(\"Classifier\")"
    ],
    "metadata": {},
    "execution_count": null
@@ -446,7 +448,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "train, test = partition(eachindex(y), 0.7)"
+    "train, test = partition(1:length(y), 0.7)"
    ],
    "metadata": {},
    "execution_count": null
@@ -852,7 +854,7 @@
    "cell_type": "code",
    "source": [
     "evaluate!(mach, resampling=Holdout(fraction_train=0.7),\n",
-    "          measures=[cross_entropy, brier_score])"
+    "          measures=[cross_entropy, misclassification_rate, brier_score])"
    ],
    "metadata": {},
    "execution_count": null
@@ -869,7 +871,7 @@
    "cell_type": "code",
    "source": [
     "evaluate!(mach, resampling=CV(nfolds=6),\n",
-    "          measures=[cross_entropy, brier_score])"
+    "          measures=[cross_entropy, misclassification_rate, brier_score])"
    ],
    "metadata": {},
    "execution_count": null
@@ -888,7 +890,7 @@
    "source": [
     "e = evaluate!(mach, resampling=CV(nfolds=6, rng=123),\n",
     "              repeats=3,\n",
-    "              measures=[cross_entropy, brier_score])"
+    "              measures=[cross_entropy, misclassification_rate, brier_score])"
    ],
    "metadata": {},
    "execution_count": null
@@ -951,7 +953,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "r = range(model, :epochs, lower=1, upper=50, scale=:log)"
+    "r = range(model, :epochs, lower=1, upper=50, scale=:log10)"
    ],
    "metadata": {},
    "execution_count": null
@@ -963,8 +965,15 @@
     "curve = learning_curve(mach,\n",
     "                       range=r,\n",
     "                       resampling=Holdout(fraction_train=0.7), # (default)\n",
-    "                       measure=cross_entropy)\n",
-    "\n",
+    "                       measure=cross_entropy)"
+   ],
+   "metadata": {},
+   "execution_count": null
+  },
+  {
+   "outputs": [],
+   "cell_type": "code",
+   "source": [
     "using Plots\n",
     "gr(size=(490,300))\n",
     "plt=plot(curve.parameter_values, curve.measurements)\n",
