update tutorial 02:  .jl .ipynb, .unexcecuted.ipnb

--- a/notebooks/02_models/notebook.unexecuted.ipynb
+++ b/notebooks/02_models/notebook.unexecuted.ipynb
@@ -175,8 +175,8 @@
    "cell_type": "markdown",
    "source": [
     "Here's how we split the data into target and input features, which\n",
-    "is needed for MLJ supervised models. We randomize the data at the\n",
-    "same time:"
+    "is needed for MLJ supervised models. We can randomize the data at\n",
+    "the same time:"
    ],
    "metadata": {}
   },
@@ -184,11 +184,19 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "y, X = unpack(iris, ==(:class), name->true; rng=123);\n",
+    "y, X = unpack(iris, ==(:class), rng=123);\n",
     "scitype(y)"
    ],
    "metadata": {},
    "execution_count": null
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This puts the `:class` column into a vector `y`, and all remaining\n",
+    "columns into a table `X`."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -242,7 +250,7 @@
    "outputs": [],
    "cell_type": "code",
    "source": [
-    "some_models = models(\"LinearRegressor\") # sic"
+    "some_models = models(\"LinearRegressor\")"
    ],
    "metadata": {},
    "execution_count": null
@@ -285,7 +293,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "So this model won't do. Let's  find all pure julia classifiers:"
+    "So this model won't do. Let's find all pure julia classifiers:"
    ],
    "metadata": {}
   },
@@ -684,9 +692,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**Important**:\n",
-    "- In MLJ, a model that can predict probabilities (and not just point values) will do so by default.\n",
-    "- For most probabilistic predictors, the predicted object is a `Distributions.Distribution` object, supporting the `Distributions.jl` [API](https://juliastats.org/Distributions.jl/latest/extends/#Create-a-Distribution-1) for such objects. In particular, the methods `rand`,  `pdf`, `logpdf`, `mode`, `median` and `mean` will apply, where appropriate."
+    "**Important**: - In MLJ, a model that can predict probabilities (and\n",
+    "not just point values) will do so by default.  - For most\n",
+    "probabilistic predictors, the predicted object is a\n",
+    "`Distributions.Distribution` object or a\n",
+    "`CategoricalDistributions.UnivariateFinite` object (the case here)\n",
+    "which all support the following methods: `rand`, `pdf`, `logpdf`;\n",
+    "and, where appropriate: `mode`, `median` and `mean`."
    ],
    "metadata": {}
   },
@@ -1107,8 +1119,7 @@
     "\n",
     "y, X, w = unpack(data,\n",
     "                 ==(:a),\n",
-    "                 name -> elscitype(Tables.getcolumn(data, name)) == Continuous,\n",
-    "                 name -> true);"
+    "                 name -> elscitype(Tables.getcolumn(data, name)) == Continuous);"
    ],
    "metadata": {},
    "execution_count": null
@@ -1303,11 +1314,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.1"
   },
   "kernelspec": {
-   "name": "julia-1.6",
-   "display_name": "Julia 1.6.3",
+   "name": "julia-1.7",
+   "display_name": "Julia 1.7.1",
    "language": "julia"
   }
  },
