in scripts, state that user should be using julia 1.7, not 1.6

--- a/notebooks/03_pipelines/notebook.ipynb
+++ b/notebooks/03_pipelines/notebook.ipynb
@@ -58,7 +58,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The package environment has been created using **Julia 1.6** and may not\n",
+    "The package environment has been created using **Julia 1.7** and may not\n",
     "instantiate properly for other Julia versions."
    ],
    "metadata": {}
@@ -138,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean(x) = 0.47253618410343046\n",
-      "std(x) = 0.3027701918985175\n"
+      "mean(x) = 0.48986440325190694\n",
+      "std(x) = 0.2875350590235868\n"
      ]
     }
    ],
@@ -160,8 +160,8 @@
      "output_type": "stream",
      "text": [
       "[ Info: Training Machine{Standardizer,…}.\n",
-      "mean(xhat) = 5.773159728050814e-17\n",
-      "std(xhat) = 1.0\n"
+      "mean(xhat) = -4.551914400963141e-16\n",
+      "std(xhat) = 0.9999999999999999\n"
      ]
     }
    ],
@@ -669,7 +669,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 2 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @864 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @134 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 2 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 19
@@ -697,7 +697,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 3 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @864 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @134 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 3 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 20
@@ -741,7 +741,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 4 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @864 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @134 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 4 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 21
@@ -857,7 +857,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:12\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:06\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:23\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:06\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:13\u001b[K\n"
      ]
     },
     {
@@ -907,7 +907,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:14\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:09\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:05\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:15\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:22\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:15\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:09\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:25\u001b[K\n"
      ]
     },
     {
@@ -938,7 +938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:06\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:02\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:03\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:08\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:02\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:05\u001b[K\n"
      ]
     },
     {
