revert to julia 1.6

--- a/notebooks/03_pipelines/notebook.ipynb
+++ b/notebooks/03_pipelines/notebook.ipynb
@@ -35,7 +35,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "v\"1.7.1\""
+      "text/plain": "v\"1.6.5\""
      },
      "metadata": {},
      "execution_count": 1
@@ -58,7 +58,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The package environment has been created using **Julia 1.7** and may not\n",
+    "The package environment has been created using **Julia 1.6** and may not\n",
     "instantiate properly for other Julia versions."
    ],
    "metadata": {}
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Activating project at `~/GoogleDrive/Julia/MLJ/MLJTutorial/notebooks/03_pipelines/env`\n"
+      "  Activating environment at `~/GoogleDrive/Julia/MLJ/MLJTutorial/notebooks/03_pipelines/env/Project.toml`\n"
      ]
     }
    ],
@@ -138,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean(x) = 0.48986440325190694\n",
-      "std(x) = 0.2875350590235868\n"
+      "mean(x) = 0.5191343981096598\n",
+      "std(x) = 0.29775348216275793\n"
      ]
     }
    ],
@@ -160,8 +160,8 @@
      "output_type": "stream",
      "text": [
       "[ Info: Training Machine{Standardizer,…}.\n",
-      "mean(xhat) = -4.551914400963141e-16\n",
-      "std(xhat) = 0.9999999999999999\n"
+      "mean(xhat) = 9.128114930589958e-17\n",
+      "std(xhat) = 1.0\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "60-element Vector{NamedTuple{(:name, :package_name, :is_supervised, :abstract_type, :deep_properties, :docstring, :fit_data_scitype, :hyperparameter_ranges, :hyperparameter_types, :hyperparameters, :implemented_methods, :inverse_transform_scitype, :is_pure_julia, :is_wrapper, :iteration_parameter, :load_path, :package_license, :package_url, :package_uuid, :predict_scitype, :prediction_type, :supports_class_weights, :supports_online, :supports_training_losses, :supports_weights, :transform_scitype, :input_scitype, :target_scitype, :output_scitype)}}:\n (name = ABODDetector, package_name = OutlierDetectionNeighbors, ... )\n (name = ABODDetector, package_name = OutlierDetectionPython, ... )\n (name = AEDetector, package_name = OutlierDetectionNetworks, ... )\n (name = AffinityPropagation, package_name = ScikitLearn, ... )\n (name = AgglomerativeClustering, package_name = ScikitLearn, ... )\n (name = BM25Transformer, package_name = MLJText, ... )\n (name = BagOfWordsTransformer, package_name = MLJText, ... )\n (name = Birch, package_name = ScikitLearn, ... )\n (name = CBLOFDetector, package_name = OutlierDetectionPython, ... )\n (name = COFDetector, package_name = OutlierDetectionNeighbors, ... )\n ⋮\n (name = SpectralClustering, package_name = ScikitLearn, ... )\n (name = Standardizer, package_name = MLJModels, ... )\n (name = TSVDTransformer, package_name = TSVD, ... )\n (name = TfidfTransformer, package_name = MLJText, ... )\n (name = UnivariateBoxCoxTransformer, package_name = MLJModels, ... )\n (name = UnivariateDiscretizer, package_name = MLJModels, ... )\n (name = UnivariateFillImputer, package_name = MLJModels, ... )\n (name = UnivariateStandardizer, package_name = MLJModels, ... )\n (name = UnivariateTimeTypeToContinuous, package_name = MLJModels, ... )"
+      "text/plain": "60-element Vector{NamedTuple{(:name, :package_name, :is_supervised, :abstract_type, :deep_properties, :docstring, :fit_data_scitype, :hyperparameter_ranges, :hyperparameter_types, :hyperparameters, :implemented_methods, :inverse_transform_scitype, :is_pure_julia, :is_wrapper, :iteration_parameter, :load_path, :package_license, :package_url, :package_uuid, :predict_scitype, :prediction_type, :supports_class_weights, :supports_online, :supports_training_losses, :supports_weights, :transform_scitype, :input_scitype, :target_scitype, :output_scitype), T} where T<:Tuple}:\n (name = ABODDetector, package_name = OutlierDetectionNeighbors, ... )\n (name = ABODDetector, package_name = OutlierDetectionPython, ... )\n (name = AEDetector, package_name = OutlierDetectionNetworks, ... )\n (name = AffinityPropagation, package_name = ScikitLearn, ... )\n (name = AgglomerativeClustering, package_name = ScikitLearn, ... )\n (name = BM25Transformer, package_name = MLJText, ... )\n (name = BagOfWordsTransformer, package_name = MLJText, ... )\n (name = Birch, package_name = ScikitLearn, ... )\n (name = CBLOFDetector, package_name = OutlierDetectionPython, ... )\n (name = COFDetector, package_name = OutlierDetectionNeighbors, ... )\n ⋮\n (name = SpectralClustering, package_name = ScikitLearn, ... )\n (name = Standardizer, package_name = MLJModels, ... )\n (name = TSVDTransformer, package_name = TSVD, ... )\n (name = TfidfTransformer, package_name = MLJText, ... )\n (name = UnivariateBoxCoxTransformer, package_name = MLJModels, ... )\n (name = UnivariateDiscretizer, package_name = MLJModels, ... )\n (name = UnivariateFillImputer, package_name = MLJModels, ... )\n (name = UnivariateStandardizer, package_name = MLJModels, ... )\n (name = UnivariateTimeTypeToContinuous, package_name = MLJModels, ... )"
      },
      "metadata": {},
      "execution_count": 11
@@ -669,7 +669,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 2 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 2 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @516 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @259 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 19
@@ -697,7 +697,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 3 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 3 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @516 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @259 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 20
@@ -741,7 +741,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 4 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @697 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @379 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
+      "text/plain": "Machine{DeterministicPipeline{NamedTuple{,…},…},…} trained 4 times; caches data\n  model: MLJBase.DeterministicPipeline{NamedTuple{(:continuous_encoder, :pca, :ridge_regressor), Tuple{MLJModelInterface.Unsupervised, MLJModelInterface.Unsupervised, MLJModelInterface.Deterministic}}, MLJModelInterface.predict}\n  args: \n    1:\tSource @516 ⏎ `ScientificTypesBase.Table{Union{AbstractVector{ScientificTypesBase.Continuous}, AbstractVector{ScientificTypesBase.Multiclass{70}}, AbstractVector{ScientificTypesBase.OrderedFactor{6}}, AbstractVector{ScientificTypesBase.OrderedFactor{13}}, AbstractVector{ScientificTypesBase.OrderedFactor{30}}, AbstractVector{ScientificTypesBase.OrderedFactor{5}}, AbstractVector{ScientificTypesBase.OrderedFactor{12}}, AbstractVector{ScientificTypesBase.OrderedFactor{2}}}}`\n    2:\tSource @259 ⏎ `AbstractVector{ScientificTypesBase.Continuous}`\n"
      },
      "metadata": {},
      "execution_count": 21
@@ -776,7 +776,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(coefs = [:x1 => -0.7328956348956909, :x2 => -0.16590563202915437, :x3 => 194.59515890822126, :x4 => 102.71301756136401],\n intercept = 540085.6428739978,)"
+      "text/plain": "(coefs = [:x1 => -0.7328956348956878, :x2 => -0.1659056320291739, :x3 => 194.5951589082211, :x4 => 102.71301756136427],\n intercept = 540085.6428739978,)"
      },
      "metadata": {},
      "execution_count": 22
@@ -794,7 +794,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(indim = 87,\n outdim = 4,\n tprincipalvar = 2.463215246230867e9,\n tresidualvar = 157533.26199626923,\n tvar = 2.463372779492863e9,\n mean = [4.369869985656781, 8.45912182482765, 2079.8997362698374, 15106.967565816869, 1.988617961412113, 1.0075417572757137, 1.2343034284921113, 3.4094295100171195, 6.6569194466293435, 1788.3906907879516  …  0.011798454633785222, 0.012122333780595013, 0.006292509138018785, 0.012955165872391617, 0.01466709850552908, 47.560052519317075, -122.21389640494147, 1986.552491556008, 12768.455651691113, 1.9577106371165502],\n principalvars = [2.177071551045086e9, 2.8418139726430327e8, 1.685016083064339e6, 277281.8384131848],)"
+      "text/plain": "(indim = 87,\n outdim = 4,\n tprincipalvar = 2.463215246230865e9,\n tresidualvar = 157533.26199626923,\n tvar = 2.4633727794928613e9,\n mean = [4.369869985656781, 8.45912182482765, 2079.8997362698374, 15106.967565816869, 1.988617961412113, 1.0075417572757137, 1.2343034284921113, 3.4094295100171195, 6.6569194466293435, 1788.3906907879516  …  0.011798454633785222, 0.012122333780595013, 0.006292509138018785, 0.012955165872391617, 0.01466709850552908, 47.56005251931713, -122.21389640494186, 1986.552491556008, 12768.455651691113, 1.9577106371165502],\n principalvars = [2.1770715510450845e9, 2.8418139726430273e8, 1.6850160830643363e6, 277281.8384131831],)"
      },
      "metadata": {},
      "execution_count": 23
@@ -857,7 +857,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:23\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:06\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:13\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:18\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:05\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:02\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:10\u001b[K\n"
      ]
     },
     {
@@ -907,7 +907,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:22\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:15\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:09\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:25\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:16\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:11\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:07\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:18\u001b[K\n"
      ]
     },
     {
@@ -938,7 +938,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:08\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:02\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:05\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:07\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:02\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:04\u001b[K\n"
      ]
     },
     {
@@ -1087,11 +1087,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.1"
+   "version": "1.6.5"
   },
   "kernelspec": {
-   "name": "julia-1.7",
-   "display_name": "Julia 1.7.1",
+   "name": "julia-1.6",
+   "display_name": "Julia 1.6.5",
    "language": "julia"
   }
  },
