update tute 04 to MLJ 0.17 (julia 1.6)

--- a/notebooks/04_tuning/notebook.unexecuted.ipynb
+++ b/notebooks/04_tuning/notebook.unexecuted.ipynb
@@ -134,7 +134,7 @@
     "        :outcome               => Multiclass,\n",
     "        :cp_data               => Multiclass);\n",
     "\n",
-    "y, X = unpack(horse, ==(:outcome), name -> true);\n",
+    "y, X = unpack(horse, ==(:outcome));\n",
     "schema(X)"
    ],
    "metadata": {},
@@ -152,7 +152,7 @@
    "cell_type": "code",
    "source": [
     "LogisticClassifier = @load LogisticClassifier pkg=MLJLinearModels\n",
-    "model = @pipeline Standardizer ContinuousEncoder LogisticClassifier\n",
+    "model = Standardizer |> ContinuousEncoder |> LogisticClassifier\n",
     "mach = machine(model, X, y)"
    ],
    "metadata": {},
@@ -528,7 +528,7 @@
     "house = DataFrames.DataFrame(house_csv)\n",
     "coerce!(house, autotype(house_csv));\n",
     "coerce!(house, Count => Continuous, :zipcode => Multiclass);\n",
-    "y, X = unpack(house, ==(:price), name -> true, rng=123);\n",
+    "y, X = unpack(house, ==(:price), rng=123);\n",
     "schema(X)"
    ],
    "metadata": {},
@@ -548,7 +548,7 @@
    "source": [
     "EvoTreeRegressor = @load EvoTreeRegressor\n",
     "tree_booster = EvoTreeRegressor(nrounds = 70)\n",
-    "model = @pipeline ContinuousEncoder tree_booster"
+    "model = ContinuousEncoder |> tree_booster"
    ],
    "metadata": {},
    "execution_count": null
@@ -668,11 +668,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.5"
   },
   "kernelspec": {
    "name": "julia-1.6",
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.6.5",
    "language": "julia"
   }
  },
