update tute 05 for MLJ 0.17

--- a/notebooks/05_composition/notebook.unexecuted.ipynb
+++ b/notebooks/05_composition/notebook.unexecuted.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Machine Learning in Julia"
+    "# Machine Learning in Julia (continued)"
    ],
    "metadata": {}
   },
@@ -101,11 +101,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`@pipeline` is great for composing models in an unbranching\n",
+    "Pipelines are great for composing models in an unbranching\n",
     "sequence. Another built-in type of model composition is a model\n",
     "*stack*; see\n",
     "[here](https://alan-turing-institute.github.io/MLJ.jl/dev/model_stacking/#Model-Stacking)\n",
-    "for details. For other complicated model compositions you'll want to\n",
+    "for details. For other more complicated model compositions you'll want to\n",
     "use MLJ's generic model composition syntax. There are two main\n",
     "steps:"
    ],
@@ -156,7 +156,7 @@
    "source": [
     "using MLJ\n",
     "LogisticClassifier = @load LogisticClassifier pkg=MLJLinearModels\n",
-    "pipe = @pipeline Standardizer LogisticClassifier;"
+    "pipe = Standardizer |> LogisticClassifier;"
    ],
    "metadata": {},
    "execution_count": null
@@ -621,20 +621,8 @@
     "   - [Learning Networks](https://alan-turing-institute.github.io/MLJ.jl/stable/composing_models/#Learning-Networks-1)\n",
     "- From Data Science Tutorials:\n",
     "    - [Learning Networks](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks/)\n",
-    "    - [Learning Networks 2](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks-2/)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "    - [Stacking](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/stacking/): an advanced example of model composition"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    - [Learning Networks 2](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks-2/)\n",
+    "    - [Stacking](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/stacking/): an advanced example of model composition\n",
     "    - [Finer Control](https://alan-turing-institute.github.io/MLJ.jl/dev/composing_models/#Method-II:-Finer-control-(advanced)-1):\n",
     "      exporting learning networks without a macro for finer control"
    ],
@@ -663,11 +651,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.5"
   },
   "kernelspec": {
    "name": "julia-1.6",
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.6.5",
    "language": "julia"
   }
  },
