--- a/notebooks/05_composition/notebook.ipynb
+++ b/notebooks/05_composition/notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Machine Learning in Julia"
+    "# Machine Learning in Julia (continued)"
    ],
    "metadata": {}
   },
@@ -35,7 +35,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "v\"1.6.3\""
+      "text/plain": "v\"1.6.5\""
      },
      "metadata": {},
      "execution_count": 1
@@ -118,11 +118,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`@pipeline` is great for composing models in an unbranching\n",
+    "Pipelines are great for composing models in an unbranching\n",
     "sequence. Another built-in type of model composition is a model\n",
     "*stack*; see\n",
     "[here](https://alan-turing-institute.github.io/MLJ.jl/dev/model_stacking/#Model-Stacking)\n",
-    "for details. For other complicated model compositions you'll want to\n",
+    "for details. For other more complicated model compositions you'll want to\n",
     "use MLJ's generic model composition syntax. There are two main\n",
     "steps:"
    ],
@@ -182,7 +182,7 @@
    "source": [
     "using MLJ\n",
     "LogisticClassifier = @load LogisticClassifier pkg=MLJLinearModels\n",
-    "pipe = @pipeline Standardizer LogisticClassifier;"
+    "pipe = Standardizer |> LogisticClassifier;"
    ],
    "metadata": {},
    "execution_count": 3
@@ -212,11 +212,11 @@
       "│ Float64    │ Float64    │ Float64    │\n",
       "│ Continuous │ Continuous │ Continuous │\n",
       "├────────────┼────────────┼────────────┤\n",
-      "│ 2.53013    │ -1.89957   │ 5.54883    │\n",
-      "│ 0.291037   │ -1.67608   │ 3.07317    │\n",
-      "│ -3.91176   │ -1.47851   │ 11.7301    │\n",
-      "│ -1.01752   │ 8.28512    │ 7.01315    │\n",
-      "│ 2.8618     │ -2.03601   │ 3.03607    │\n",
+      "│ 8.45478    │ 5.58438    │ -15.7428   │\n",
+      "│ 7.18548    │ -1.12553   │ -9.21812   │\n",
+      "│ 7.41536    │ -1.97783   │ -10.4311   │\n",
+      "│ 6.09818    │ -0.0493624 │ -10.5146   │\n",
+      "│ 8.13276    │ 14.7729    │ 1.78481    │\n",
       "└────────────┴────────────┴────────────┘\n"
      ]
     }
@@ -251,7 +251,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-element MLJBase.UnivariateFiniteVector{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0671, 2=>0.0688, 3=>0.864)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0781, 2=>0.0733, 3=>0.849)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.128, 2=>0.714, 3=>0.158)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.658, 2=>0.136, 3=>0.206)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0449, 2=>0.0317, 3=>0.923)"
+      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.118, 2=>0.581, 3=>0.3)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0729, 2=>0.0974, 3=>0.83)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0673, 2=>0.126, 3=>0.807)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0365, 2=>0.0387, 3=>0.925)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.76, 2=>0.102, 3=>0.138)"
      },
      "metadata": {},
      "execution_count": 5
@@ -299,7 +299,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{LogisticClassifier,…}}\n  args:\n    1:\tNode{Machine{Standardizer,…}}\n  formula:\n    predict(\n        \u001b[0m\u001b[1mMachine{LogisticClassifier,…}\u001b[22m, \n        transform(\n            \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n            Source @873))"
+      "text/plain": "Node{Machine{LogisticClassifier,…}}\n  args:\n    1:\tNode{Machine{Standardizer,…}}\n  formula:\n    predict(\n        \u001b[0m\u001b[1mMachine{LogisticClassifier,…}\u001b[22m, \n        transform(\n            \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n            Source @332))"
      },
      "metadata": {},
      "execution_count": 6
@@ -345,11 +345,11 @@
       "│ Float64    │ Float64    │ Float64    │\n",
       "│ Continuous │ Continuous │ Continuous │\n",
       "├────────────┼────────────┼────────────┤\n",
-      "│ 0.856089   │ -0.474923  │ -0.148276  │\n",
-      "│ 0.0504786  │ -0.425292  │ -0.839008  │\n",
-      "│ -1.46166   │ -0.381415  │ 1.57636    │\n",
-      "│ -0.420332  │ 1.78685    │ 0.260282   │\n",
-      "│ 0.975421   │ -0.505224  │ -0.84936   │\n",
+      "│ 1.08606    │ 0.306674   │ -1.0739    │\n",
+      "│ -0.295978  │ -0.65334   │ -0.0611227 │\n",
+      "│ -0.0456798 │ -0.775282  │ -0.249413  │\n",
+      "│ -1.47984   │ -0.499368  │ -0.26236   │\n",
+      "│ 0.735436   │ 1.62132    │ 1.6468     │\n",
       "└────────────┴────────────┴────────────┘\n"
      ]
     }
@@ -375,7 +375,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-element MLJBase.UnivariateFiniteVector{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0671, 2=>0.0688, 3=>0.864)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0781, 2=>0.0733, 3=>0.849)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.128, 2=>0.714, 3=>0.158)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.658, 2=>0.136, 3=>0.206)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0449, 2=>0.0317, 3=>0.923)"
+      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.118, 2=>0.581, 3=>0.3)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0729, 2=>0.0974, 3=>0.83)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0673, 2=>0.126, 3=>0.807)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0365, 2=>0.0387, 3=>0.925)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.76, 2=>0.102, 3=>0.138)"
      },
      "metadata": {},
      "execution_count": 8
@@ -402,7 +402,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element Vector{Any}:\n Source @873 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n Source @119 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`"
+      "text/plain": "2-element Vector{Any}:\n Source @332 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n Source @085 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`"
      },
      "metadata": {},
      "execution_count": 9
@@ -428,7 +428,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element MLJBase.UnivariateFiniteVector{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.057, 2=>0.000505, 3=>0.942)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00281, 2=>1.31e-5, 3=>0.997)"
+      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00016, 2=>1.38e-7, 3=>1.0)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0177, 2=>0.000231, 3=>0.982)"
      },
      "metadata": {},
      "execution_count": 10
@@ -487,7 +487,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{ProbabilisticSurrogate,…} trained 0 times; does not cache data\n  args: \n    1:\tSource @873 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n    2:\tSource @119 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`\n"
+      "text/plain": "Machine{ProbabilisticSurrogate,…} trained 0 times; does not cache data\n  model: MLJBase.ProbabilisticSurrogate\n  args: \n    1:\tSource @332 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n    2:\tSource @085 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`\n"
      },
      "metadata": {},
      "execution_count": 11
@@ -522,7 +522,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element MLJBase.UnivariateFiniteVector{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00935, 2=>0.169, 3=>0.822)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00551, 2=>0.0161, 3=>0.978)"
+      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>2.84e-8, 2=>2.85e-12, 3=>1.0)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>8.9e-5, 2=>1.68e-7, 3=>1.0)"
      },
      "metadata": {},
      "execution_count": 12
@@ -572,7 +572,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:01\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:00\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:00\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:00\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:00\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:21\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:10\u001b[K\n"
      ]
     },
     {
@@ -682,7 +682,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Source @764 ⏎ `Nothing`"
+      "text/plain": "Source @470 ⏎ `Nothing`"
      },
      "metadata": {},
      "execution_count": 16
@@ -708,7 +708,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tSource @764\n  formula:\n    transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        Source @764)"
+      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tSource @470\n  formula:\n    transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        Source @470)"
      },
      "metadata": {},
      "execution_count": 17
@@ -739,7 +739,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Nothing}\n  args:\n    1:\tNode{Nothing}\n    2:\tNode{Nothing}\n  formula:\n    +(\n        #134(\n            predict(\n                \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @518))),\n        #134(\n            predict(\n                \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @518))))"
+      "text/plain": "Node{Nothing}\n  args:\n    1:\tNode{Nothing}\n    2:\tNode{Nothing}\n  formula:\n    +(\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @902))),\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @902))))"
      },
      "metadata": {},
      "execution_count": 18
@@ -770,7 +770,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tNode{Nothing}\n  formula:\n    inverse_transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        +(\n            #134(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @518))),\n            #134(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @518)))))"
+      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tNode{Nothing}\n  formula:\n    inverse_transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        +(\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @902))),\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @902)))))"
      },
      "metadata": {},
      "execution_count": 19
@@ -835,13 +835,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:36\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:18\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:09\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:04\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:18\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:32\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:16\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:16\u001b[K\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌────────────────────────┬─────────────┬───────────┬────────────────────────────\n│\u001b[22m measure                \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation \u001b[0m│\u001b[22m per_fold                 \u001b[0m ⋯\n├────────────────────────┼─────────────┼───────────┼────────────────────────────\n│ RootMeanSquaredError() │ 3.76        │ predict   │ [2.9, 4.98, 3.72, 3.71, 2 ⋯\n│ MeanAbsoluteError()    │ 2.42        │ predict   │ [2.1, 2.93, 2.37, 2.47, 2 ⋯\n└────────────────────────┴─────────────┴───────────┴────────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
+      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌────────────────────────┬─────────────┬───────────┬────────────────────────────\n│\u001b[22m measure                \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation \u001b[0m│\u001b[22m per_fold                 \u001b[0m ⋯\n├────────────────────────┼─────────────┼───────────┼────────────────────────────\n│ RootMeanSquaredError() │ 3.84        │ predict   │ [4.85, 3.33, 3.32, 3.89,  ⋯\n│ MeanAbsoluteError()    │ 2.46        │ predict   │ [2.7, 2.3, 2.48, 2.67, 2. ⋯\n└────────────────────────┴─────────────┴───────────┴────────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
      },
      "metadata": {},
      "execution_count": 22
@@ -867,20 +867,8 @@
     "   - [Learning Networks](https://alan-turing-institute.github.io/MLJ.jl/stable/composing_models/#Learning-Networks-1)\n",
     "- From Data Science Tutorials:\n",
     "    - [Learning Networks](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks/)\n",
-    "    - [Learning Networks 2](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks-2/)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "    - [Stacking](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/stacking/): an advanced example of model composition"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    - [Learning Networks 2](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/learning-networks-2/)\n",
+    "    - [Stacking](https://juliaai.github.io/DataScienceTutorials.jl/getting-started/stacking/): an advanced example of model composition\n",
     "    - [Finer Control](https://alan-turing-institute.github.io/MLJ.jl/dev/composing_models/#Method-II:-Finer-control-(advanced)-1):\n",
     "      exporting learning networks without a macro for finer control"
    ],
@@ -909,11 +897,11 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.5"
   },
   "kernelspec": {
    "name": "julia-1.6",
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.6.5",
    "language": "julia"
   }
  },
