update to MLJLinearModels 0.6 and make adjustments

--- a/notebooks/05_composition/notebook.unexecuted.ipynb
+++ b/notebooks/05_composition/notebook.unexecuted.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "using MLJ\n",
     "LogisticClassifier = @load LogisticClassifier pkg=MLJLinearModels\n",
-    "pipe = Standardizer |> LogisticClassifier;"
+    "pipe = Standardizer |> LogisticClassifier(lambda=0.001);"
    ],
    "metadata": {},
    "execution_count": null
@@ -199,7 +199,7 @@
    "cell_type": "code",
    "source": [
     "stand = Standardizer();\n",
-    "linear = LogisticClassifier();\n",
+    "linear = LogisticClassifier(lambda=0.001);\n",
     "\n",
     "mach1 = machine(stand, X);\n",
     "fit!(mach1);\n",
@@ -241,7 +241,7 @@
     "y = source(y)  # or y = source()\n",
     "\n",
     "stand = Standardizer();\n",
-    "linear = LogisticClassifier();\n",
+    "linear = LogisticClassifier(lambda=0.001);\n",
     "\n",
     "mach1 = machine(stand, X);\n",
     "Xstand = transform(mach1, X);\n",
