--- a/notebooks/05_composition/notebook.ipynb
+++ b/notebooks/05_composition/notebook.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "using MLJ\n",
     "LogisticClassifier = @load LogisticClassifier pkg=MLJLinearModels\n",
-    "pipe = Standardizer |> LogisticClassifier;"
+    "pipe = Standardizer |> LogisticClassifier(lambda=0.001);"
    ],
    "metadata": {},
    "execution_count": 3
@@ -212,11 +212,11 @@
       "│ Float64    │ Float64    │ Float64    │\n",
       "│ Continuous │ Continuous │ Continuous │\n",
       "├────────────┼────────────┼────────────┤\n",
-      "│ 8.45478    │ 5.58438    │ -15.7428   │\n",
-      "│ 7.18548    │ -1.12553   │ -9.21812   │\n",
-      "│ 7.41536    │ -1.97783   │ -10.4311   │\n",
-      "│ 6.09818    │ -0.0493624 │ -10.5146   │\n",
-      "│ 8.13276    │ 14.7729    │ 1.78481    │\n",
+      "│ -3.60123   │ 6.70768    │ -2.56354   │\n",
+      "│ -3.66823   │ 8.71521    │ -3.84678   │\n",
+      "│ -3.63704   │ 10.9229    │ 8.41975    │\n",
+      "│ -1.12161   │ 7.85232    │ -2.35529   │\n",
+      "│ 1.89284    │ -3.04084   │ 12.0195    │\n",
       "└────────────┴────────────┴────────────┘\n"
      ]
     }
@@ -251,7 +251,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.118, 2=>0.581, 3=>0.3)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0729, 2=>0.0974, 3=>0.83)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0673, 2=>0.126, 3=>0.807)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0365, 2=>0.0387, 3=>0.925)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.76, 2=>0.102, 3=>0.138)"
+      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.000562, 2=>0.00279, 3=>0.997)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00016, 2=>0.00224, 3=>0.998)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00129, 2=>0.989, 3=>0.00982)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00184, 2=>0.00161, 3=>0.997)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.997, 2=>0.00112, 3=>0.00185)"
      },
      "metadata": {},
      "execution_count": 5
@@ -260,7 +260,7 @@
    "cell_type": "code",
    "source": [
     "stand = Standardizer();\n",
-    "linear = LogisticClassifier();\n",
+    "linear = LogisticClassifier(lambda=0.001);\n",
     "\n",
     "mach1 = machine(stand, X);\n",
     "fit!(mach1);\n",
@@ -299,7 +299,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{LogisticClassifier,…}}\n  args:\n    1:\tNode{Machine{Standardizer,…}}\n  formula:\n    predict(\n        \u001b[0m\u001b[1mMachine{LogisticClassifier,…}\u001b[22m, \n        transform(\n            \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n            Source @332))"
+      "text/plain": "Node{Machine{LogisticClassifier,…}}\n  args:\n    1:\tNode{Machine{Standardizer,…}}\n  formula:\n    predict(\n        \u001b[0m\u001b[1mMachine{LogisticClassifier,…}\u001b[22m, \n        transform(\n            \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n            Source @459))"
      },
      "metadata": {},
      "execution_count": 6
@@ -311,7 +311,7 @@
     "y = source(y)  # or y = source()\n",
     "\n",
     "stand = Standardizer();\n",
-    "linear = LogisticClassifier();\n",
+    "linear = LogisticClassifier(lambda=0.001);\n",
     "\n",
     "mach1 = machine(stand, X);\n",
     "Xstand = transform(mach1, X);\n",
@@ -345,11 +345,11 @@
       "│ Float64    │ Float64    │ Float64    │\n",
       "│ Continuous │ Continuous │ Continuous │\n",
       "├────────────┼────────────┼────────────┤\n",
-      "│ 1.08606    │ 0.306674   │ -1.0739    │\n",
-      "│ -0.295978  │ -0.65334   │ -0.0611227 │\n",
-      "│ -0.0456798 │ -0.775282  │ -0.249413  │\n",
-      "│ -1.47984   │ -0.499368  │ -0.26236   │\n",
-      "│ 0.735436   │ 1.62132    │ 1.6468     │\n",
+      "│ -0.643339  │ 0.0880537  │ -0.668083  │\n",
+      "│ -0.67072   │ 0.459233   │ -0.843106  │\n",
+      "│ -0.657975  │ 0.867413   │ 0.829948   │\n",
+      "│ 0.370039   │ 0.29969    │ -0.63968   │\n",
+      "│ 1.602      │ -1.71439   │ 1.32092    │\n",
       "└────────────┴────────────┴────────────┘\n"
      ]
     }
@@ -375,7 +375,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.118, 2=>0.581, 3=>0.3)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0729, 2=>0.0974, 3=>0.83)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0673, 2=>0.126, 3=>0.807)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0365, 2=>0.0387, 3=>0.925)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.76, 2=>0.102, 3=>0.138)"
+      "text/plain": "5-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.000562, 2=>0.00279, 3=>0.997)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00016, 2=>0.00224, 3=>0.998)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00129, 2=>0.989, 3=>0.00982)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00184, 2=>0.00161, 3=>0.997)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.997, 2=>0.00112, 3=>0.00185)"
      },
      "metadata": {},
      "execution_count": 8
@@ -402,7 +402,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element Vector{Any}:\n Source @332 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n Source @085 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`"
+      "text/plain": "2-element Vector{Any}:\n Source @459 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n Source @518 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`"
      },
      "metadata": {},
      "execution_count": 9
@@ -428,7 +428,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00016, 2=>1.38e-7, 3=>1.0)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0177, 2=>0.000231, 3=>0.982)"
+      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.0482, 2=>0.00796, 3=>0.944)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.21, 2=>6.54e-5, 3=>0.79)"
      },
      "metadata": {},
      "execution_count": 10
@@ -487,7 +487,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Machine{ProbabilisticSurrogate,…} trained 0 times; does not cache data\n  model: MLJBase.ProbabilisticSurrogate\n  args: \n    1:\tSource @332 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n    2:\tSource @085 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`\n"
+      "text/plain": "Machine{ProbabilisticSurrogate,…} trained 0 times; does not cache data\n  model: MLJBase.ProbabilisticSurrogate\n  args: \n    1:\tSource @459 ⏎ `ScientificTypesBase.Table{AbstractVector{ScientificTypesBase.Continuous}}`\n    2:\tSource @518 ⏎ `AbstractVector{ScientificTypesBase.Multiclass{3}}`\n"
      },
      "metadata": {},
      "execution_count": 11
@@ -522,7 +522,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>2.84e-8, 2=>2.85e-12, 3=>1.0)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>8.9e-5, 2=>1.68e-7, 3=>1.0)"
+      "text/plain": "2-element CategoricalDistributions.UnivariateFiniteArray{ScientificTypesBase.Multiclass{3}, Int64, UInt32, Float64, 1}:\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>4.18e-5, 2=>0.993, 3=>0.00723)\n UnivariateFinite{ScientificTypesBase.Multiclass{3}}(1=>0.00129, 2=>0.913, 3=>0.0856)"
      },
      "metadata": {},
      "execution_count": 12
@@ -572,13 +572,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:21\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:10\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:28\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:15\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:08\u001b[K\rEvaluating over 6 folds:  83%[====================>    ]  ETA: 0:00:03\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:17\u001b[K\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌─────────────────────────┬─────────────┬──────────────┬────────────────────────\n│\u001b[22m measure                 \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation    \u001b[0m│\u001b[22m per_fold             \u001b[0m ⋯\n├─────────────────────────┼─────────────┼──────────────┼────────────────────────\n│ MisclassificationRate() │ 0.08        │ predict_mode │ [0.0, 0.04, 0.08, 0.0 ⋯\n└─────────────────────────┴─────────────┴──────────────┴────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
+      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌─────────────────────────┬─────────────┬──────────────┬────────────────────────\n│\u001b[22m measure                 \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation    \u001b[0m│\u001b[22m per_fold             \u001b[0m ⋯\n├─────────────────────────┼─────────────┼──────────────┼────────────────────────\n│ MisclassificationRate() │ 0.0733      │ predict_mode │ [0.0, 0.0, 0.12, 0.08 ⋯\n└─────────────────────────┴─────────────┴──────────────┴────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
      },
      "metadata": {},
      "execution_count": 14
@@ -682,7 +682,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Source @470 ⏎ `Nothing`"
+      "text/plain": "Source @425 ⏎ `Nothing`"
      },
      "metadata": {},
      "execution_count": 16
@@ -708,7 +708,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tSource @470\n  formula:\n    transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        Source @470)"
+      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tSource @425\n  formula:\n    transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        Source @425)"
      },
      "metadata": {},
      "execution_count": 17
@@ -739,7 +739,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Nothing}\n  args:\n    1:\tNode{Nothing}\n    2:\tNode{Nothing}\n  formula:\n    +(\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @902))),\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @902))))"
+      "text/plain": "Node{Nothing}\n  args:\n    1:\tNode{Nothing}\n    2:\tNode{Nothing}\n  formula:\n    +(\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @934))),\n        #88(\n            predict(\n                \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                transform(\n                    \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                    Source @934))))"
      },
      "metadata": {},
      "execution_count": 18
@@ -770,7 +770,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tNode{Nothing}\n  formula:\n    inverse_transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        +(\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @902))),\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @902)))))"
+      "text/plain": "Node{Machine{UnivariateBoxCoxTransformer,…}}\n  args:\n    1:\tNode{Nothing}\n  formula:\n    inverse_transform(\n        \u001b[0m\u001b[1mMachine{UnivariateBoxCoxTransformer,…}\u001b[22m, \n        +(\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RidgeRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @934))),\n            #88(\n                predict(\n                    \u001b[0m\u001b[1mMachine{RandomForestRegressor,…}\u001b[22m, \n                    transform(\n                        \u001b[0m\u001b[1mMachine{Standardizer,…}\u001b[22m, \n                        Source @934)))))"
      },
      "metadata": {},
      "execution_count": 19
@@ -816,7 +816,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "CompositeModel(\n    rgs1 = RidgeRegressor(\n            lambda = 0.1,\n            fit_intercept = true,\n            penalize_intercept = false,\n            solver = nothing),\n    rgs2 = RandomForestRegressor(\n            max_depth = -1,\n            min_samples_leaf = 1,\n            min_samples_split = 2,\n            min_purity_increase = 0.0,\n            n_subfeatures = -1,\n            n_trees = 50,\n            sampling_fraction = 0.7,\n            pdf_smoothing = 0.0,\n            rng = Random._GLOBAL_RNG()))"
+      "text/plain": "CompositeModel(\n    rgs1 = RidgeRegressor(\n            lambda = 0.1,\n            fit_intercept = true,\n            penalize_intercept = false,\n            scale_penalty_with_samples = true,\n            solver = nothing),\n    rgs2 = RandomForestRegressor(\n            max_depth = -1,\n            min_samples_leaf = 1,\n            min_samples_split = 2,\n            min_purity_increase = 0.0,\n            n_subfeatures = -1,\n            n_trees = 50,\n            sampling_fraction = 0.7,\n            pdf_smoothing = 0.0,\n            rng = Random._GLOBAL_RNG()))"
      },
      "metadata": {},
      "execution_count": 21
@@ -835,13 +835,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:32\u001b[K\rEvaluating over 6 folds:  50%[============>            ]  ETA: 0:00:16\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:16\u001b[K\n"
+      "\rEvaluating over 6 folds:  33%[========>                ]  ETA: 0:00:32\u001b[K\rEvaluating over 6 folds:  67%[================>        ]  ETA: 0:00:08\u001b[K\rEvaluating over 6 folds: 100%[=========================] Time: 0:00:16\u001b[K\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌────────────────────────┬─────────────┬───────────┬────────────────────────────\n│\u001b[22m measure                \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation \u001b[0m│\u001b[22m per_fold                 \u001b[0m ⋯\n├────────────────────────┼─────────────┼───────────┼────────────────────────────\n│ RootMeanSquaredError() │ 3.84        │ predict   │ [4.85, 3.33, 3.32, 3.89,  ⋯\n│ MeanAbsoluteError()    │ 2.46        │ predict   │ [2.7, 2.3, 2.48, 2.67, 2. ⋯\n└────────────────────────┴─────────────┴───────────┴────────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
+      "text/plain": "PerformanceEvaluation object with these fields:\n  measure, measurement, operation, per_fold,\n  per_observation, fitted_params_per_fold,\n  report_per_fold, train_test_pairs\nExtract:\n┌────────────────────────┬─────────────┬───────────┬────────────────────────────\n│\u001b[22m measure                \u001b[0m│\u001b[22m measurement \u001b[0m│\u001b[22m operation \u001b[0m│\u001b[22m per_fold                 \u001b[0m ⋯\n├────────────────────────┼─────────────┼───────────┼────────────────────────────\n│ RootMeanSquaredError() │ 4.87        │ predict   │ [4.79, 4.5, 5.57, 4.06, 4 ⋯\n│ MeanAbsoluteError()    │ 3.18        │ predict   │ [3.03, 2.92, 3.27, 2.92,  ⋯\n└────────────────────────┴─────────────┴───────────┴────────────────────────────\n\u001b[36m                                                                1 column omitted\u001b[0m\n"
      },
      "metadata": {},
      "execution_count": 22
